--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -1,4 +1,4 @@
 FROM alpine:3.12.1
 
-RUN apk --no-cache add curl
-RUN apk --no-cache add upx
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories \
+    && apk --no-cache --update add curl upx
